Devise+Google authentication complete bar minor views work

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
   contact: "Contact"
   upload: "Upload"
   signin: "Sign In"
+  signout: "Sign Out"
   search: "Search"
   signup: "Sign Up"
   contribute: "Contribute"
